--- a/assets/css/pages/contact.css
+++ b/assets/css/pages/contact.css
@@ -2,30 +2,15 @@
   #service.css
 \*-----------------------------------*/
 
-/**
- * copyright 2022 codewithsadee
- */
- 
-/**
- * TABLE OF CONTENT
- *
- * COMPONENTS
- * Btn............................Buttons style
- *
- * MAIN CONTENT
- * Contact........................Contact style
- * Media queries..................Responsive for all devices
- */
-
-
 
 
 
 /*-----------------------------------*\
-  #COMPONENTS
+#COMPONENTS
 \*-----------------------------------*/
 
 @import url("../components/btn.css");
+@import url(../components/scrollbar.css);
 
 
 
