--- a/assets/css/require.css
+++ b/assets/css/require.css
@@ -38,7 +38,7 @@
   --maximum-yellow-red: hsl(41, 99%, 64%);
   --orange-red_a20: hsla(19, 100%, 55%, 0.2);
   --eerie-black: hsl(210, 11%, 15%);
-  --orange-red: hsl(7, 86%, 52%);
+  --orange-red: #EC0000;
   --davys-gray: hsl(0, 0%, 33%);
   --white_a80: hsla(0, 0%, 100%, 0.8);
   --white_a75: hsla(0, 0%, 100%, 0.75);
