--- a/assets/css/pages/portfolio.css
+++ b/assets/css/pages/portfolio.css
@@ -2,32 +2,15 @@
   #service.css
 \*-----------------------------------*/
 
-/**
- * copyright 2022 codewithsadee
- */
- 
-/**
- * TABLE OF CONTENT
- *
- * COMPONENTS
- * Btn............................Buttons style
- *
- * MAIN CONTENT
- * Portfolio......................Portfolio style
- * Media queries..................Responsive for all devices
- */
-
-
-
 
 
 /*-----------------------------------*\
-  #COMPONENTS
+#COMPONENTS
 \*-----------------------------------*/
 
 @import url('../components/btn.css');
 
-
+@import url(../components/scrollbar.css);
 
 
 
