--- a/assets/css/components/btn.css
+++ b/assets/css/components/btn.css
@@ -46,3 +46,91 @@
 }
 
 .btn-tertiary:is(:hover, :focus-visible) { color: var(--white); }
+
+
+/*btn like*/
+
+.likeBtn{
+  display: inline-block;
+  margin-left: 15px;
+  
+}
+
+.comment-react {
+  margin: 0;
+  display: flex;
+  background-color: #f1f1f1;
+  scale: 1.5;
+  width: 75px;
+  border: 2px solid #393636 ;
+}
+
+.comment-react button {
+  width: 35px;
+  height: 35px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: transparent;
+  border: 0;
+  outline: none;
+}
+
+.comment-react button:after {
+  content: "";
+  width: 40px;
+  height: 40px;
+  position: absolute;
+  left: -3px;
+  top: -3px;
+  background-color: #EC0000;
+  border-radius: 50%;
+  z-index: 0;
+  transform: scale(0);
+}
+
+
+.comment-react button:hover:after {
+  animation: ripple 0.6s ease-in-out forwards;
+}
+
+.comment-react button:hover svg {
+  fill: #EC0000;
+}
+
+.comment-react button:hover svg path {
+  stroke: #EC0000;
+  fill: #EC0000;
+}
+
+.comment-react hr {
+  height: 1px;
+  background-color: #dfe1e6;
+  margin: auto;
+  border: 0;
+}
+
+.comment-react span {
+  height: 35px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: auto;
+  font-size: 20px;
+  font-weight: 600;
+  color: #707277;
+  padding-right: 5px;
+  text-align: center;
+}
+
+@keyframes ripple {
+  0% {
+    transform: scale(0);
+    opacity: 0.6;
+  }
+
+  100% {
+    transform: scale(2);
+    opacity: 0;
+  }
+}
